<resources>
    <string name="app_name">Cashflow</string>

    <!-- Constants general values -->
    <string name="transaction_adapter_key">transaction</string>
    <string name="category_adapter_key">category</string>

    <!-- Buttons strings -->
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Annuler</string>

    <!-- Titre fragments -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_expenses">Dépenses</string>
    <string name="title_expense_details">Dépense détail</string>
    <string name="title_earning">Revenus</string>
    <string name="title_income_details">Revenu détail</string>
    <string name="title_charts">Statistiques</string>
    <string name="title_categories">Catégories</string>

    <!-- Category strings -->
    <!-- category adapters -->
    <string name="title_cat_expense_details">Categorie dépense détail</string>
    <string name="title_cat_income_details">Catégorie revenu détail</string>
    <string name="title_cat_expense_add">Nouvelle catégorie dépense</string>
    <string name="title_cat_income_add">Nouvelle catégorie revenu</string>
    <string name="title_cat_choice">Choix de la catégorie</string>
    <string name="alert_act_title">Activation</string>
    <string name="alert_des_title">"Désactivation!"</string>
    <string name="alert_act_msg">Voulez-vous vraiment activer la catégorie?</string>
    <string name="alert_des_msg">Voulez-vous vraiment désactiver la catégorie?</string>
    <string name="server_response_ok">Mise à jour reussi!</string>
    <string name="server_response_nok">Problème de connexion!</string>
    <string name="cat_start">cat_</string>
    <!-- category inputs -->
    <string name="quota_input">Quota pas saisi!</string>
    <string name="max_size_input">Quota trop grande</string>
    <string name="amount_input">Quota non conforme</string>
    <string name="category_name_input">Le nom de catégorie non conforme</string>

    <!-- menu_categorie_select -->
    <string name="item_switch_view">Switch</string>
    <string name="cat_name_hint">Nom</string>
    <string name="cat_quota_hint">Quota</string>


    <string name="text_login">Se connecter</string>
    <string name="no_account">Pas encore de compte ? En créer un</string>
    <string name="title_email">Email</string>
    <string name="title_password">Mot de passe</string>
    <string name="title_password_confirmation">Confirmation mot de passe</string>
    <string name="title_name">Nom</string>
    <string name="title_firstname">Prenom</string>
    <string name="create_account">Créer un compte</string>
    <string name="already_membre">Déjà membre ? Se connecter</string>
    <string name="authentification">Connexion...</string>
    <string name="name_error">Entrez au minimum 3 caractères</string>
    <string name="email_error">Entrez une adresse mail valide</string>
    <string name="password_error">Au minimum 6 caractères</string>
    <string name="password2_error">Les mots de passes sont différents</string>
    <string name="error_signin">Utilisateur ou mot de passe incorrect</string>
    <string name="error_signup">Email déjà utilisé</string>
    <string name="title_disconnect">Déconnexion</string>

    <!-- Expense strings -->
    <string name="expense">Dépenses</string>
    <string name="total">Total</string>

    <!-- menu_expense_edit -->
    <string name="item_edit">Edit</string>
    <string name="item_delete">Delete</string>


    <string name="title_activity_expense">Dépenses</string>
    <string name="add_price">Montant</string>
    <string name="add_description">Description</string>
    <string name="add">Ajouter</string>

    <!-- AddOrEditActivity -->

    <!-- Catégories strings -->
    <string name="cat_spinner_prompt">Choix de catégorie</string>
    <string name="cat_switch_name">Revenus</string>
    <string name="cat_state_enables">Activées</string>
    <string name="cat_state_disabled">Inactivées</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_categorie_select">CategorieSelectActivity</string>


</resources>
