<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/bottombar_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/bottombar_expense"
        android:title="@string/title_expenses" />

    <item
        android:id="@+id/navigation_earning"
        android:icon="@drawable/bottombar_earning"
        android:title="@string/title_earning" />

    <item
        android:id="@+id/navigation_charts"
        android:icon="@drawable/bottombar_charts"
        android:title="@string/title_charts" />
    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/bottombar_categories"
        android:title="@string/title_categories" />

</menu>
