<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/ic_launcher_background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--  Categorie Label -->
        <Spinner
            android:id="@+id/input_categorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/cat_spiner_items"
            android:prompt="@string/cat_spiner_prompt"/>
        
        <!-- DatePicker -->
        <Button
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:text="" />

        <!--  Price Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
            <EditText android:id="@+id/input_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditTextTheme"
                android:inputType="numberDecimal"
                android:hint="@string/add_price"/>
        </android.support.design.widget.TextInputLayout>


        <!--  Comment Label -->
        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
        <EditText android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/add_description"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:onClick="saveExpense"
            android:text="@string/add"/>

    </LinearLayout>
</ScrollView>